--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,17 @@
 # Read more under http://docs.travis-ci.com/user/build-configuration/
 # THIS SCRIPT IS SUPPOSED TO BE AN EXAMPLE. MODIFY IT ACCORDING TO YOUR NEEDS!
 
-sudo: false
 language: python
+dist: focal
+os: linux
 virtualenv:
   system_site_packages: false
 matrix:
   fast_finish: true
   include:
-    - python: 3.6
-      env: DISTRIB="ubuntu" TOX_PYTHON_VERSION="py36" COVERAGE="true"
-    - env: DISTRIB="conda" PYTHON_VERSION="3.6" COVERAGE="false"
+    - python: 3.8
+      env: DISTRIB="ubuntu" TOX_PYTHON_VERSION="py38" COVERAGE="true"
+    - env: DISTRIB="conda" PYTHON_VERSION="3.8" COVERAGE="false"
 install:
   - source tests/travis_install.sh
   - pip install -r requirements.txt
