--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@
 
 [metadata]
 name = pylds
-description = Add a short description here!
+description = Low discrepancy Sequence Python Code
 author = Wai-Shing Luk
 author-email = luk036@gmail.com
 license = mit
@@ -75,7 +75,7 @@ extras = True
 # e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
 # in order to write a coverage file that can be read by Jenkins.
 addopts =
-    --cov pylds --cov-report term-missing
+    --cov src
     --verbose
 norecursedirs =
     dist
