--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ matrix:
   fast_finish: true
   include:
     - python: 3.8
-      env: DISTRIB="ubuntu" TOX_PYTHON_VERSION="py38" COVERAGE="true"
+      env: DISTRIB="ubuntu" TOX_PYTHON_VERSION="py38" COVERAGE="false"
     - env: DISTRIB="conda" PYTHON_VERSION="3.8" COVERAGE="false"
 install:
   - source tests/travis_install.sh
