fix the build problems

--- a/setup.cfg
+++ b/setup.cfg
@@ -74,9 +74,9 @@ extras = True
 # Specify command line options as you would do when invoking py.test directly.
 # e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
 # in order to write a coverage file that can be read by Jenkins.
-addopts =
-    --cov src
-    --verbose
+#addopts =
+#    --cov src
+#    --verbose
 norecursedirs =
     dist
     build
