--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -9,7 +9,6 @@ tasks:
       python3 setup.py develop
 # image:
 #   file: .gitpod.Dockerfile
-
 vscode:
   extensions:
-    - njpwerner.autodocstring@0.4.0:anSzIFYcUMlw2TxiINxxdQ==
+    - njpwerner.autodocstring
