--- a/setup.cfg
+++ b/setup.cfg
@@ -6,20 +6,30 @@
 name = pylds
 description = Low discrepancy Sequence Python Code
 author = Wai-Shing Luk
-author-email = luk036@gmail.com
-license = mit
-long-description = file: README.rst
-long-description-content-type = text/x-rst; charset=UTF-8
+author_email = luk036@gmail.com
+license = MIT
+long_description = file: README.md
+long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
 url = https://github.com/pyscaffold/pyscaffold/
-project-urls =
+# Add here related links, for example:
+project_urls =
     Documentation = https://pyscaffold.org/
+#    Source = https://github.com/pyscaffold/pyscaffold/
+#    Changelog = https://pyscaffold.org/en/latest/changelog.html
+#    Tracker = https://github.com/pyscaffold/pyscaffold/issues
+#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
+#    Download = https://pypi.org/project/PyScaffold/#files
+#    Twitter = https://twitter.com/PyScaffold
+
 # Change if running only on Windows, Mac or Linux (comma-separated)
 platforms = any
+
 # Add here all kinds of additional classifiers as defined under
 # https://pypi.python.org/pypi?%3Aaction=list_classifiers
 classifiers =
     Development Status :: 4 - Beta
     Programming Language :: Python
+
 
 [options]
 zip_safe = False
@@ -27,17 +37,19 @@ packages = find_namespace:
 include_package_data = True
 package_dir =
     =src
-# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
-# Add here dependencies of your project (semicolon/line-separated), e.g.
+
+# Require a min/specific Python version (comma-separated conditions)
+# python_requires = >=3.8
+
+# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
+# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
+# new major versions. This works if the required packages follow Semantic Versioning.
+# For more information, check out https://semver.org/.
 install_requires =
     importlib-metadata; python_version<"3.8"
     numpy
     numexpr
-    scipy
-# The usage of test_requires is discouraged, see `Dependency Management` docs
-# tests_require = pytest; pytest-cov
-# Require a specific Python version, e.g. Python 2.7 or >= 3.4
-# python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*
+
 
 [options.packages.find]
 where = src
@@ -48,12 +60,15 @@ exclude =
 # Add here additional requirements for extra features, to install with:
 # `pip install pylds[PDF]` like:
 # PDF = ReportLab; RXP
+
 # Add here test requirements (semicolon/line-separated)
 testing =
+    setuptools
     pytest
     pytest-cov
+    scipy
 
-
+[options.entry_points]
 # Add here console scripts like:
 # console_scripts =
 #     script_name = pylds.module:function
@@ -64,19 +79,15 @@ testing =
 # pyscaffold.cli =
 #     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
 
-[test]
-# py.test options when running `python setup.py test`
-# addopts = --verbose
-extras = True
-
 [tool:pytest]
-# Options for py.test:
-# Specify command line options as you would do when invoking py.test directly.
+# Specify command line options as you would do when invoking pytest directly.
 # e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
 # in order to write a coverage file that can be read by Jenkins.
-#addopts =
-#    --cov src
-#    --verbose
+# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
+#          Comment those flags to avoid this py.test issue.
+addopts =
+    --cov pylds --cov-report term-missing
+    --verbose
 norecursedirs =
     dist
     build
@@ -85,28 +96,22 @@ testpaths = tests
 # Use pytest markers to select/deselect specific tests
 # markers =
 #     slow: mark tests as slow (deselect with '-m "not slow"')
-
-[aliases]
-dists = bdist_wheel
+#     system: mark end-to-end system tests
 
 [bdist_wheel]
 # Use this option if your package is pure-python
 universal = 1
 
-[build_sphinx]
-source_dir = docs
-build_dir = build/sphinx
-
 [devpi:upload]
 # Options for the devpi: PyPI server and packaging tool
 # VCS export must be deactivated since we are using setuptools-scm
-no-vcs = 1
+no_vcs = 1
 formats = bdist_wheel
 
 [flake8]
 # Some sane defaults for the code style checker flake8
-max-line-length = 88
-extend-ignore = E203, W503
+max_line_length = 88
+extend_ignore = E203, W503
 # ^  Black-compatible
 #    E203 and W503 have edge cases handled by black
 exclude =
@@ -122,4 +127,5 @@ exclude =
 version = 4.0.2
 package = pylds
 extensions =
+    markdown
     pre_commit
